--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ vendor/
 # Environment files
 .env
 .env.local
+
+# Super-linter outputs
+super-linter-output
+super-linter.log
+
+# GitHub Actions leftovers
+github_conf
