Add GitHub Action branding with package icon and blue color

--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,10 @@ name: 'Joomla Extension Packager'
 description: 'A composite action to package and release Joomla extensions (modules, plugins, components)'
 author: 'N6REJ'
 
+labels:
+  icon: 'package'
+  color: 'blue'
+
 inputs:
     # Extension identification
     extension-name:
