--- a/docs/example-module.yml
+++ b/docs/example-module.yml
@@ -16,8 +16,9 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GH_PAT }}
-      - name: Package Module
-        uses: ./.github/actions/joomla-packager
+      - name: Joomla Extension Packager
+        uses: N6REJ/joomla-packager@2025.6.23
+        id: packager
         with:
           extension-name: 'mod_example'
           extension-xml: 'mod_example.xml'
