--- a/.github/workflows/test-component.yml
+++ b/.github/workflows/test-component.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Run Joomla Packager Action (Component)
-        uses: ./.github/actions/joomla-packager
+        uses: N6REJ/joomla-packager@2025.6.23
         with:
           extension-name: 'com_testcomponent'
           extension-xml: 'test-extensions/test-component/com_testcomponent.xml'
