Enhance Joomla update server XML handling with robust URL updates and auto-creation

--- a/action.yml
+++ b/action.yml
@@ -532,13 +532,35 @@ runs:
                   # Update version
                   sed -i "s|<version>.*</version>|<version>${{ steps.set_version.outputs.version }}</version>|g" "$UPDATES_XML"
                 
-                  # Update download URL
-                  sed -i "s|<downloadurl>.*</downloadurl>|<downloadurl>$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
+                  # Update download URL (robust to whitespace/attributes)
+                  sed -i -E "s|<downloadurl[^>]*>.*</downloadurl>|<downloadurl>$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
                 
                   echo "Updated $UPDATES_XML file with new version and download URL"
                   cat "$UPDATES_XML"
                 else
-                  echo "::warning::${{ inputs.updates-xml-file }} file not found in repository"
+                  echo "${UPDATES_XML} not found, creating a new updates.xml file."
+                  cat > "$UPDATES_XML" <<EOF
+<?xml version="1.0" encoding="utf-8"?>
+<updates>
+  <update>
+    <name>${EXTENSION_NAME}</name>
+    <description>Update for ${EXTENSION_NAME}</description>
+    <element>${EXTENSION_NAME}</element>
+    <type>extension</type>
+    <version>${{ steps.set_version.outputs.version }}</version>
+    <infourl>https://github.com/${{ github.repository }}</infourl>
+    <downloads>
+      <downloadurl>${DOWNLOAD_URL}</downloadurl>
+    </downloads>
+    <tags/>
+    <maintainer>${{ inputs.author }}</maintainer>
+    <maintainerurl>https://github.com/${{ github.repository_owner }}</maintainerurl>
+    <targetplatform name="joomla" version="3.9"/>
+  </update>
+</updates>
+EOF
+                  echo "Created and populated $UPDATES_XML file."
+                  cat "$UPDATES_XML"
                 fi
 
         -   name: Upload to GitHub Artifacts
