--- a/action.yml
+++ b/action.yml
@@ -400,31 +400,29 @@ runs:
                   fi
                 done <<< "$COMMITS"
                 
-                # Always create changelog file, even if no commits
-                echo "# Changelog" > ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                echo "All notable changes to this project will be documented in this file." >> ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                echo "The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)," >> ${{ inputs.changelog-file }}
-                echo "and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)." >> ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
-                echo "## [${{ steps.set_version.outputs.version }}] - $CURRENT_DATE" >> ${{ inputs.changelog-file }}
-                echo "" >> ${{ inputs.changelog-file }}
+                # Prepare new version section
+                NEW_SECTION="## [${{ steps.set_version.outputs.version }}] - $CURRENT_DATE\n"
+                if [ ! -z "$ADDED" ]; then NEW_SECTION+=$'\n### Added\n'"$ADDED"$'\n'; fi
+                if [ ! -z "$CHANGED" ]; then NEW_SECTION+=$'\n### Changed\n'"$CHANGED"$'\n'; fi
+                if [ ! -z "$FIXED" ]; then NEW_SECTION+=$'\n### Fixed\n'"$FIXED"$'\n'; fi
+                if [ ! -z "$REMOVED" ]; then NEW_SECTION+=$'\n### Removed\n'"$REMOVED"$'\n'; fi
+                if [ ! -z "$SECURITY" ]; then NEW_SECTION+=$'\n### Security\n'"$SECURITY"$'\n'; fi
+                NEW_SECTION+=$'\n'
                 
-                if [ ! -z "$ADDED" ]; then echo "### Added" >> ${{ inputs.changelog-file }}; echo -e "$ADDED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$CHANGED" ]; then echo "### Changed" >> ${{ inputs.changelog-file }}; echo -e "$CHANGED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$FIXED" ]; then echo "### Fixed" >> ${{ inputs.changelog-file }}; echo -e "$FIXED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$REMOVED" ]; then echo "### Removed" >> ${{ inputs.changelog-file }}; echo -e "$REMOVED" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
-                if [ ! -z "$SECURITY" ]; then echo "### Security" >> ${{ inputs.changelog-file }}; echo -e "$SECURITY" >> ${{ inputs.changelog-file }}; echo "" >> ${{ inputs.changelog-file }}; fi
+                # If CHANGELOG.md exists, insert new section after header, else create file with header
+                HEADER="# Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n\n"
+                if [ -f "${{ inputs.changelog-file }}" ]; then
+                  # Extract header (up to first version section)
+                  HEADER_CONTENT=$(awk '/^## \[.*\] - /{exit} {print}' "${{ inputs.changelog-file }}")
+                  REST_CONTENT=$(awk 'f;/^## \[.*\] - /{f=1}' "${{ inputs.changelog-file }}")
+                  if [ -z "$HEADER_CONTENT" ]; then HEADER_CONTENT="$HEADER"; fi
+                  echo -e "$HEADER_CONTENT$NEW_SECTION$REST_CONTENT" > "${{ inputs.changelog-file }}"
+                else
+                  echo -e "$HEADER$NEW_SECTION" > "${{ inputs.changelog-file }}"
+                fi
                 
                 # Output for release notes
-                CHANGELOG_OUTPUT=""
-                if [ ! -z "$ADDED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Added\n${ADDED}\n\n"; fi
-                if [ ! -z "$CHANGED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Changed\n${CHANGED}\n\n"; fi
-                if [ ! -z "$FIXED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Fixed\n${FIXED}\n\n"; fi
-                if [ ! -z "$REMOVED" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Removed\n${REMOVED}\n\n"; fi
-                if [ ! -z "$SECURITY" ]; then CHANGELOG_OUTPUT="${CHANGELOG_OUTPUT}### Security\n${SECURITY}\n\n"; fi
-                
+                CHANGELOG_OUTPUT="$NEW_SECTION"
                 echo "changelog<<EOF" >> $GITHUB_OUTPUT
                 echo -e "$CHANGELOG_OUTPUT" >> $GITHUB_OUTPUT
                 echo "EOF" >> $GITHUB_OUTPUT
@@ -529,22 +527,28 @@ runs:
             run: |
                 EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
                 UPDATES_XML="${{ inputs.updates-xml-file }}"
-                if [ -f "$UPDATES_XML" ]; then
-                  cp "$UPDATES_XML" "${UPDATES_XML}.bak"
-                
-                  DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ steps.set_version.outputs.version }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
-                
-                  # Update version
-                  sed -i "s|<version>.*</version>|<version>${{ steps.set_version.outputs.version }}</version>|g" "$UPDATES_XML"
-                
-                  # Update download URL (robust to attributes)
-                  sed -i -E "s|<downloadurl[^>]*>.*</downloadurl>|<downloadurl type=\"full\" format=\"zip\">$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
-                
-                  echo "Updated $UPDATES_XML file with new version and download URL"
-                  cat "$UPDATES_XML"
-                else
-                  echo "::warning::${{ inputs.updates-xml-file }} file not found in repository"
-                fi
+                VERSION="${{ steps.set_version.outputs.version }}"
+                DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ steps.set_version.outputs.version }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+                cat > "$UPDATES_XML" <<EOF
+<?xml version="1.0" encoding="utf-8"?>
+<updates>
+  <update>
+    <name>${EXTENSION_NAME}</name>
+    <description>Update for ${EXTENSION_NAME}</description>
+    <element>${EXTENSION_NAME}</element>
+    <type>module</type>
+    <version>${VERSION}</version>
+    <infourl title="GitHub Repository">https://github.com/${{ github.repository }}</infourl>
+    <downloads>
+      <downloadurl type="full" format="zip">${DOWNLOAD_URL}</downloadurl>
+    </downloads>
+    <targetplatform name="joomla" version="5.*" />
+    <php_minimum>8.1</php_minimum>
+  </update>
+</updates>
+EOF
+                echo "Replaced $UPDATES_XML with new version and download URL"
+                cat "$UPDATES_XML"
 
         -   name: Upload to GitHub Artifacts
             if: inputs.upload-artifact == 'true'
