--- a/action.yml
+++ b/action.yml
@@ -524,21 +524,34 @@ runs:
             run: |
                 EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
                 UPDATES_XML="${{ inputs.updates-xml-file }}"
+                DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ steps.set_version.outputs.version }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+                # If updates.xml does not exist, create a minimal valid structure
+                if [ ! -f "$UPDATES_XML" ]; then
+                  echo '<?xml version="1.0" encoding="utf-8"?>' > "$UPDATES_XML"
+                  echo '<updates>' >> "$UPDATES_XML"
+                  echo '  <update>' >> "$UPDATES_XML"
+                  echo '    <name>'"$EXTENSION_NAME"'</name>' >> "$UPDATES_XML"
+                  echo '    <description />' >> "$UPDATES_XML"
+                  echo '    <element>'"$EXTENSION_NAME"'</element>' >> "$UPDATES_XML"
+                  echo '    <type />' >> "$UPDATES_XML"
+                  echo '    <version>${{ steps.set_version.outputs.version }}</version>' >> "$UPDATES_XML"
+                  echo '    <infourl />' >> "$UPDATES_XML"
+                  echo '    <downloads>' >> "$UPDATES_XML"
+                  echo '      <downloadurl type="full" format="zip">'"$DOWNLOAD_URL"'</downloadurl>' >> "$UPDATES_XML"
+                  echo '    </downloads>' >> "$UPDATES_XML"
+                  echo '  </update>' >> "$UPDATES_XML"
+                  echo '</updates>' >> "$UPDATES_XML"
+                fi
                 if [ -f "$UPDATES_XML" ]; then
                   cp "$UPDATES_XML" "${UPDATES_XML}.bak"
-                
-                  DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ steps.set_version.outputs.version }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
-                
                   # Update version
                   sed -i "s|<version>.*</version>|<version>${{ steps.set_version.outputs.version }}</version>|g" "$UPDATES_XML"
-                
                   # Update download URL
-                  sed -i "s|<downloadurl>.*</downloadurl>|<downloadurl>$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
-                
+                  sed -i "s|<downloadurl.*>.*</downloadurl>|<downloadurl type=\"full\" format=\"zip\">$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
                   echo "Updated $UPDATES_XML file with new version and download URL"
                   cat "$UPDATES_XML"
                 else
-                  echo "::warning::${{ inputs.updates-xml-file }} file not found in repository"
+                  echo "::warning::${{ inputs.updates-xml-file }} file could not be created."
                 fi
 
         -   name: Upload to GitHub Artifacts
