--- a/action.yml
+++ b/action.yml
@@ -523,12 +523,12 @@ runs:
                 
                 # Create ZIP archive with files at root
                 cd "$BUILD_DIR"
-                zip -r ../${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip .
+                zip -r ${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip .
                 cd ..
-                echo "Created ZIP archive: ${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+                echo "Created ZIP archive: build/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
                 
                 # Output package path
-                echo "package_path=${{ inputs.package-dir }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip" >> $GITHUB_OUTPUT
+                echo "package_path=build/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip" >> $GITHUB_OUTPUT
 
         -   name: Create GitHub Release
             if: inputs.create-release == 'true'
@@ -584,8 +584,10 @@ runs:
                   cp "$UPDATES_XML" "${UPDATES_XML}.bak"
                   # Update version
                   sed -i "s|<version>.*</version>|<version>${{ steps.set_version.outputs.version }}</version>|g" "$UPDATES_XML"
-                  # Update download URL
-                  sed -i "s|<downloadurl.*>.*</downloadurl>|<downloadurl type=\"full\" format=\"zip\">$DOWNLOAD_URL</downloadurl>|g" "$UPDATES_XML"
+                  # Remove all existing <downloadurl ...>...</downloadurl> lines
+                  sed -i '/<downloadurl.*>.*<\/downloadurl>/d' "$UPDATES_XML"
+                  # Add the new downloadurl line just before </downloads>
+                  sed -i "/<\/downloads>/i\      <downloadurl type=\"full\" format=\"zip\">$DOWNLOAD_URL</downloadurl>" "$UPDATES_XML"
                   echo "Updated $UPDATES_XML file with new version and download URL"
                   cat "$UPDATES_XML"
                 else
